crates/mlir-rs/src/dialect/snapshots/mlir_rs__dialect__cf__tests__compile_br.snap
---
source: crates/mlir-rs/src/dialect/cf.rs
expression: module.as_operation()
---
module {
  func.func @foo() {
    %idx1 = index.constant 1
    cf.br ^bb1(%idx1 : index)
  ^bb1(%0: index):  // pred: ^bb0
    return
  }
}
